--- a/pothole.ipynb
+++ b/pothole.ipynb
@@ -1276,7 +1276,15 @@
         "id": "vXMco5B30bnz"
       },
       "execution_count": null,
-      "outputs": []
+       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/YOLOv8_Segmentation_DeepSORT_Object_Tracking/ultralytics/yolo/v8/segment\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
