--- a/pothole.ipynb
+++ b/pothole.ipynb
@@ -1281,7 +1281,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-           Results saved to /content/YOLOv8_Segmentation_DeepSORT_Object_Tracking/runs/detect/train2
+           "Results saved to /content/YOLOv8_Segmentation_DeepSORT_Object_Tracking/runs/detect/train"
           ]
         }
       ]
